# praktikum2-strukturData

./: README.md
TugasPraktikum2/: CMakeLists.txt  main.cpp
TugasPraktikum2/include/: clearscreen.hpp  dataItem.hpp  intro.hpp  loading.hpp  pauseconsole.hpp  reverseTranspose.hpp
TugasPraktikum2/src/functionMisc/clearscreen/: clearscreen.cpp
TugasPraktikum2/src/functionMisc/intro/: intro.cpp
TugasPraktikum2/src/functionMisc/loading/: loading.cpp
TugasPraktikum2/src/functionMisc/pauseconsole/: pauseconsole.cpp
TugasPraktikum2/src/functionTugas/array2DreverseTranspose/: arraytranspose.cpp
TugasPraktikum2/src/functionTugas/pointerTanggal/: pointerTanggal.cpp
TugasPraktikum2/test/: test.cpp
